--- a/css/style.css
+++ b/css/style.css
@@ -15,14 +15,14 @@
 
 body {
     margin: 0;
-    background-color: #f5f5f8;
-    font-size: 18px;
+    background-color: #fff7d1;
+    font-size: 25px;
     font-family: 'Noto Sans', sans-serif;
 }
 
 header {
-    height: 70px;
-    background-color: #0f16;
+    height: 100px;
+    background-color: #337700;
     position: fixed;
     width: 100%;
     padding-top: 20px;
@@ -47,9 +47,10 @@ main {
 
 aside {
     width: 190px;
+    margin-top: 30px;
     height: 100vh;
     position: fixed;
-    background: linear-gradient(to bottom, #18243f, #30415d);
+    background: linear-gradient(to bottom, #000000, #000000);
     padding-top: 10px;
     font-size: 20px;
 }
@@ -88,7 +89,7 @@ p {
 .col-20 {width: 20%;}
 .col-30 {width: 30%;}
 .col-40 {width: 40%;}
-.col-50 {width: 50%;}
+.col-50 {width: 150%; height: 150%;}
 .col-60 {width: 60%;}
 .col-70 {width: 70%;}
 .col-80 {width: 80%;}
@@ -99,17 +100,25 @@ p {
 .title {
     border-bottom: 4px solid #ff533d;
     margin-bottom: 5px;
-    margin-top: 10px;
+    margin-top: 100px;
     display: inline-block;
 }
 
 .intro-video {
     display: block;
     max-height: 50vh;
-    margin: 4opx auto;
+    margin: 40px auto;
     max-width: 100%;
     border-radius: 8px;
     
+}
+
+.intro-video {
+    display: block;
+    max-height: 50vh;
+    margin: 40px auto;
+    max-width: 100%;
+    border-radius: 8px;
 }
 
 .gallery {
@@ -118,6 +127,7 @@ p {
     flex-wrap: wrap;
     margin-top: 40px;
 }
+
 
 .gallery img {
     width: 200px;
@@ -145,42 +155,18 @@ p {
     overflow-y: scroll;
 }
 
-.contact-list {
-    line-height: 200%;
-    list-style: linear-gradient(#ff533d, #ff533d);
-}
 
-.map {
-    width: 100%;
-    max-width: 480px;
-    height: 320px;
-    border-radius: 5px;
-    border: 2px solid #ff533d !important;
 
-}
+
+
+
 
 .centered {
     text-align: center;
 }
 
-.contact-form {
-    background-color: rgb(180, 161, 161);
-    border-radius: 5px;
-    border: 2px solid #ff533d;
-    max-width: 480px;
-    padding: 5px 15px 30px 15px;
-}
 
-.contact-form input, .contact-form textarea {
-    display: block;
-    width: 90%;
-    margin: 15px auto 0px auto;
-    resize: none;
-    font-family: inherit;
-    padding: 3px;
-    font-size: 16px;
 
-}
 
 #menu-btn {
     color: white;
@@ -193,6 +179,17 @@ p {
 
 .show {
     display: block !important;
+}
+
+.header-yolka {
+    background: url(https://for-web.ru/uploads/yolka.png) repeat-x;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    width: 100%;
+    height: 34px;
+    position: fixed;
 }
 
 @media (max-width: 768px) {
